--- a/tugashtml.html
+++ b/tugashtml.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas HTML</title>
 </head>
-
 <body>
     <table width="100%">
         <br>
@@ -31,7 +30,7 @@
                 </p>
 
                 <p style="margin-left: 120px; margin-right: 50px; text-align: justify">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate, unde quas error, illo
+                    lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate, unde quas error, illo
                     nobis rerum eaque ad magni, reiciendis labore veritatis nihil! Pariatur neque, porro veritatis
                     beatae id nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit corporis corrupti
                     unde laudantium quo, odit, incidunt quam provident rem minima eius inventore at excepturi? Cumque
